# Autron

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
aubo_controller/: .gitignore  PROGRESS_PUBLIC.md  README.md  RESPONSE.md  REVIEW.md  SETUP.md  run_backend.py  start_all.bat  start_backend.bat
aubo_controller/backend/: pyproject.toml
aubo_controller/backend/src/robot_controller/: __init__.py  camera_service.py  config.py  eye3d_camera_adapter.py  robot_controller.py
aubo_controller/backend/src/robot_controller/api/: __init__.py  main.py
aubo_controller/backend/src/robot_controller/mujoco_sim/: __init__.py  simulator.py  test_model_loading.py
aubo_controller/backend/src/robot_controller/mujoco_sim/models/aubo_i5/: aubo_i5.urdf
aubo_controller/backend/src/robot_controller/mujoco_sim/models/aubo_i5_30/: aubo_i5_30.urdf  generated_test.xml
aubo_controller/backend/src/robot_controller/mujoco_sim/models/aubo_i5_mujoco/: aubo_i5.urdf
aubo_controller/frontend/: index.html  package-lock.json  package.json  vite.config.ts
aubo_controller/frontend/src/: App.tsx
aubo_description-main/: .gitignore  CMakeLists.txt  README.md
aubo_description-main/launch/: aubo_viewer.launch.py
aubo_description-main/meshes/: aubo_C3_12  aubo_C5_12  aubo_C7_10  aubo_E3_12  aubo_E5_12  aubo_T12_10  aubo_T6_10  aubo_T6_21  aubo_i10H_21  aubo_i16H_B1  aubo_i20H_10  aubo_i25H_10  aubo_i25_39  aubo_i7H_10  aubo_iS10_12  aubo_iS20_10  aubo_iS7_12
autron_testbed/: README.md  pyproject.toml  start_frontend_simulation_test.bat  start_simulation_test.bat  start_test.bat
(+523 files in other folders)
